sidebar: align navigation and views style, fixes #4898
git-svn-id: svn://develop.studip.de/studip/trunk@32000 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -13,7 +13,7 @@
     flex: 0 0 auto;
     margin-bottom: 1em;
     position: relative;
-    
+
     &:before {
         @border-width: 2px;
         border-right: @border-width solid @light-gray-color-60;
@@ -68,7 +68,7 @@
     padding: 5px 8px;
     overflow: hidden;
     text-overflow: ellipsis;
-    
+
     .sidebar-image-with-context & {
         right: 120px;
     }
@@ -99,43 +99,27 @@ ul.widget-list {
     span[disabled] {
         text-decoration: line-through;
     }
-    &.sidebar-navigation > li {
-        padding-left: 5px;
-        &.active {
-            background: @base-color-40;
-            .box-shadow(inset 0 0 0 1px @base-color-60);
-            #arrow > .right-border(floor(0.5 * @line-height-computed), @base-color-40, 1px, @base-color-60, -12px);
+    &.sidebar-navigation > li.active {
+        background: @base-color-40;
+        .box-shadow(inset 0 0 0 1px @base-color-60);
+        #arrow > .right-border(floor(0.5 * @line-height-computed), @base-color-40, 1px, @base-color-60, -12px);
 
-            display: block;
-
-            a {
-                color: #fff;
-            }
-
-            &:before, &:after {
-                margin-left: -1px;
-            }
-
-            // Obtuse angle looks kinda ugly with borders
-            &:before {
-                border-left-width: floor(0.5 * @line-height-computed * 2 / 3);
-            }
-            &:after {
-                border-left-width: floor(0.5 * @line-height-computed * 2 / 3) - 1;
-            }
+        a {
+            color: #fff;
         }
     }
-    &.sidebar-views > li {
+    &.sidebar-views > li.active {
+        background: @activity-color-60;
+        .box-shadow(inset 0 0 0 1px @orange-40);
+        #arrow > .right-border(floor(0.5 * @line-height-computed), @activity-color-60, 1px, @orange-40, -12px);
+    }
+    &.sidebar-navigation > li, &.sidebar-views > li {
+        padding-left: 5px;
         &.active {
-            background: @activity-color-60;
-            .box-shadow(inset 0 0 0 1px @orange-40);
-            #arrow > .right-border(floor(0.5 * @line-height-computed), @activity-color-60, 1px, @orange-40, -12px);
-
-            display: block;
-
             &:before, &:after {
                 margin-left: -1px;
             }
+            display: block;
 
             // Obtuse angle looks kinda ugly with borders
             &:before {
@@ -216,19 +200,19 @@ ul.widget-list {
     list-style: none;
     margin: 0;
     padding: 0;
-    
+
     > li {
         line-height: 1.5em;
         margin-left: 0;
         padding-left: 0;
     }
-    
+
     .options-checkbox {
         background-repeat: no-repeat;
         background-position: left 2px;
         display: block;
         padding-left: 20px;
-        
+
         &.options-checked {
             .retina-background-icon('blue/checkbox-checked.png');
         }
@@ -242,7 +226,7 @@ ul.widget-list {
         background-position: left 2px;
         display: block;
         padding-left: 20px;
-        
+
         &.options-checked {
             .retina-background-icon('blue/radiobutton-checked.png');
         }
@@ -279,7 +263,7 @@ select.sidebar-selectlist {
         margin: 0;
         padding: 0;
         li {
-            .clearfix(); 
+            .clearfix();
             margin-bottom: 0.5em;
             &:last-child {
                 margin-bottom: 0;
@@ -311,7 +295,7 @@ select.sidebar-selectlist {
 .sidebar-widget.sidebar-infobox {
     border-color: @red;
     background: @light-gray-color-20;
-    
+
     .sidebar-widget-header {
         background: @red-40;
     }
